--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -24,8 +24,8 @@
         <%= f.file_field :profile_image, placeholder: "Image", accept: "image/*" %>
       </div>
       <div class="form-group">
-        <label for ="inputBody">Introduction</label></br>
-        <%= f.text_area :body, autofucus: true, id:"inputBody", placeholder:"Body" %>
+        <label for ="inputIntroduction">Introduction</label></br>
+        <%= f.text_area :introduction, autofucus: true, id:"inputIntrodution", placeholder:"Introduction" %>
       </div>
       <div class="form-group">
         <p class="btn btn-success">
