--- a/app/views/books/_new.html.erb
+++ b/app/views/books/_new.html.erb
@@ -1,9 +1,9 @@
 <div class="col-md-3">
   <h2>User info</h2>
-  <% if user.profile_image.attached? %>
-    <%= image_tag user.profile_image %>
+  <% if user.get_profile_image.attached? %>
+    <%= image_tag user.get_profile_image, size: "100x100" %>
   <% else %>
-    <%= image_tag 'no_image' %>
+    <%= image_tag 'no_image.jpg', size: "100x100" %>
   <% end %>
   <table class="table">
     <tr>
@@ -12,22 +12,22 @@
     </tr>
     <tr>
       <th>introduction</th>
-      <th><%= user.body %></th>
+      <th><%= user.introduction %></th>
     </tr>
   </table>
   <div class="row">
     <% if user == current_user %>
-      <a class="btn btn-outline-secondary btn-block" href="<%= edit_user_path(current_user) %>">
+    　<%= link_to edit_user_path(user), class: 'btn btn-outline-secondary btn-block' do %>
         <i class="fas fa-user-cog"></i>
-      </a>
+      <% end %>
     <% else %>
-      <a class="btn btn-outline-secondary btn-block" href="<%= user_path(user) %>">
+      <%= link_to edit_user_path(user), class: 'btn btn-outline-secondary btn-block' do %>
         <i class="fas fa-user-cog"></i>
-      </a>
+      <% end %>
     <% end %>
   </div>
   
-  <h2 class="mt-3">New Book</h2>
+  <h2 class="mt-3">New book</h2>
   <%= form_with model: book_new do |f| %>
     <div class="form-group">
       <h4>Title</h4>
