--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -25,12 +25,12 @@
         <tbody>
           <% @books.each do |book| %>
           <tr>
-            <td>      
-            <% if @user.profile_image.attached? %>
-              <%= image_tag @user.profile_image %>
-            <% else %>
-              <%= image_tag @user.get_profile_image %>
-            <% end %>
+            <td> 
+              <% if book.user.get_profile_image.attached? %>
+                <%= link_to image_tag(book.user.get_profile_image, size: "100x100"), user_path(book.user) %>
+              <% else %>
+                <%= link_to image_tag('no_image.jpg', size: "100x100"), user_path(book.user) %>
+              <% end %>
             </td>
             <td>
               <%= link_to book.title, book_path(book) %>
