--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,16 +24,17 @@
             <% if user_signed_in? %>
               <li class="nav-item d-flex align-items-center">
                 <i class="fa-solid fa-house" style="color: #ffffff; margin-right: 8px;"></i>
-                <%= link_to "Home", user_path(current_user.id), class: 'nav-link text-light p-2' %>
-              </li>
-              <li class="nav-item d-flex align-items-center">
-                <i class="fa-solid fa-book-open" style="color: #ffffff; margin-right: 8px;"></i>
-                <%= link_to "Books", books_path, class: 'nav-link text-light p-2' %>
+                <%= link_to "Home", user_path(current_user), class: 'nav-link text-light p-2' %>
               </li>
               <li class="nav-item d-flex align-items-center">
                 <i class="fa-solid fa-users" style="color: #ffffff; margin-right: 8px;"></i>
                 <%= link_to "Users", users_path, class: 'nav-link text-light p-2' %>
               </li>
+              <li class="nav-item d-flex align-items-center">
+                <i class="fa-solid fa-book-open" style="color: #ffffff; margin-right: 8px;"></i>
+                <%= link_to "Books", books_path, class: 'nav-link text-light p-2' %>
+              </li>
+
               <li class="nav-item d-flex align-items-center">
                 <i class="fa-solid fa-sign-out-alt" style="color: #ffffff; margin-right: 8px;"></i>
                 <%= link_to "Log out", destroy_user_session_path, method: :delete, class: 'nav-link text-light p-2' %>
