--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -36,10 +36,30 @@
               <%= link_to book.title, book_path(book) %>
             </td>
             <td><%= book.body %></td>
+            <td>
+              <%= link_to "#{book.book_comments.count}Comments", book_path(book.id) %>
+            </td>
+            <td>
+              <% if current_user && book.favorited_by?(current_user) %>
+                <p>
+                <%= link_to book_favorite_path(book), method: :delete do %>
+                <i class="fa fa-heart"></i><%= book.favorites.count %> いいね
+                <% end %>
+                </p>
+              <% else %>
+                <p>
+                <%= link_to book_favorite_path(book), method: :post do %>
+                <i class="fa fa-heart-o"></i><%= book.favorites.count %> like
+                <% end %>
+                </p>
+              <% end %>
+            </td>
           </tr>
           <% end %>
         </tbody>
       </table>
+      
+
     </div>
   </div>
 </div>
