--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -33,8 +33,44 @@
               <%= link_to @book.user.name, user_path(@user) %>
             </td>
           </tr>
+          <tr>
+            <td>
+              <p><%= @book.book_comments.count %> comments</p>
+            </td>
+            <% @book.book_comments.each do |book_comment| %>
+              <td>
+                <%= image_tag book_comment.user.get_profile_image, size: '50x50' %>
+              </td>
+              <td><%= book_comment.user.name %></td>
+              <td><%= book_comment.comment%></td>
+              <% if book_comment.user == current_user %>
+                <td><%= link_to "Destroy", book_book_comment_path(book_comment.book, book_comment), method: :delete %></td>
+              <% end %>
+            <% end %>
+          </tr>
         </tbody>
       </table>
+      <div>
+        <% if @book.favorited_by?(current_user) %>
+          <p>
+          <%= link_to book_favorite_path(@book), method: :delete do %>
+            <i class="fa fa-heart" style="color: red;"></i><%= @book.favorites.count %> いいね
+          <% end %>
+          </p>
+        <% else %>
+          <p>
+          <%= link_to book_favorite_path(@book), method: :post do %>
+            <i class="fa fa-heart"></i><%= @book.favorites.count %> いいね
+          <% end %>
+          </p>
+        <% end %>
+      </div>
+      <div>
+        <%= form_with model: [@book, @book_comment] do |f| %>
+          <%= f.text_area :comment, rows: '5', placeholder: "Comment" %>
+          <%= f.submit "送信" %>
+        <% end %>
+      </div>
     </div>
   </div>
 </div>
